--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,49 @@
 *.iml
-.terraform/
 .DS_Store
 .idea
-terraform.tfstate
-terraform.tfstate.backup
 .vscode
+*.zip
+
+# From: https://github.com/github/gitignore/blob/master/Terraform.gitignore
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+
+# Exclude all .tfvars files, which are likely to contain sentitive data, such as
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
+# to change depending on the environment.
+#
+*.tfvars
+# Exclude special tfvars for scanning terraform and getting a deeper more through result
+!.tools.tfvars
+!tflint.tfvars
+!tfsec.tfvars
+!trivy.tfvars
+
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Include override files you do wish to add to version control using negated pattern
+#
+# !example_override.tf
+
+# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
+# example: *tfplan*
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+
+# Ignore .terraform.lock.hcl lock files as this is just a module repo
+**/.terraform.lock.hcl
