--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,25 +20,7 @@ parameters:
   run_shellcheck:
     type: boolean
     default: false
-  run_terraform_all:
-    type: boolean
-    default: false
   run_terraform:
-    type: boolean
-    default: false
-  run_terraform_dev:
-    type: boolean
-    default: false
-  run_terraform_qa:
-    type: boolean
-    default: false
-  run_terraform_prod:
-    type: boolean
-    default: false
-  run_terraform_eng:
-    type: boolean
-    default: false
-  run_terraform_new:
     type: boolean
     default: false
 
@@ -53,6 +35,7 @@ workflows:
           mapping: |
             .* run_setup false
             .*\.sh run_shellcheck true
+            .* run_terraform true
 
   wf-terraform:
     when:
@@ -61,7 +44,6 @@ workflows:
       - smartrent/terraform_format:
           name: Terraform Format
           <<: *terraform_docker_version
-          format_path: "./infrastructure/terraform"
       - smartrent/terraform_validate:
           name: Terraform Validate 
           <<: *terraform_docker_version
