--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@ version: 2.1
 
 setup: << pipeline.parameters.run_setup >>
 
-
 orbs:
   smartrent: smartrent/smartrent@1.1.0
   path-filtering: circleci/path-filtering@1.0.0
@@ -47,18 +46,23 @@ workflows:
       - smartrent/terraform_format:
           name: Terraform Format
           <<: *terraform_docker_version
+          steps:
+            - checkout
       - smartrent/terraform_validate:
           name: Terraform Validate 
           <<: *terraform_docker_version
           matrix:
             parameters:
               validate_path: *validate_lint_sec_paths
-
+          steps:
+            - checkout
 
   wf-shellcheck:
     when: << pipeline.parameters.run_shellcheck >>
     jobs:
-      - shellcheck/check
+      - shellcheck/check:
+          steps:
+            - checkout
 
   wf-tflint:
     when: << pipeline.parameters.run_terraform >>
@@ -69,6 +73,8 @@ workflows:
           matrix:
             parameters:
               tflint_path: *validate_lint_sec_paths
+          steps:
+            - checkout
 
   wf-tfsec:
     when: << pipeline.parameters.run_terraform >>
@@ -80,3 +86,5 @@ workflows:
           matrix:
             parameters:
               tfsec_path: *validate_lint_sec_paths
+          steps:
+            - checkout
