--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,23 +46,17 @@ workflows:
       - smartrent/terraform_format:
           name: Terraform Format
           <<: *terraform_docker_version
-          steps:
-            - checkout
       - smartrent/terraform_validate:
           name: Terraform Validate 
           <<: *terraform_docker_version
           matrix:
             parameters:
               validate_path: *validate_lint_sec_paths
-          steps:
-            - checkout
 
   wf-shellcheck:
     when: << pipeline.parameters.run_shellcheck >>
     jobs:
-      - shellcheck/check:
-          steps:
-            - checkout
+      - shellcheck/check
 
   wf-tflint:
     when: << pipeline.parameters.run_terraform >>
@@ -73,8 +67,6 @@ workflows:
           matrix:
             parameters:
               tflint_path: *validate_lint_sec_paths
-          steps:
-            - checkout
 
   wf-tfsec:
     when: << pipeline.parameters.run_terraform >>
@@ -86,5 +78,3 @@ workflows:
           matrix:
             parameters:
               tfsec_path: *validate_lint_sec_paths
-          steps:
-            - checkout
