--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ workflows:
           <<: *terraform_docker_version
           matrix:
             parameters:
-              validate_path: *validate_lint_sec_paths
+              terraform_validate_path: *validate_lint_sec_paths
 
   wf-shellcheck:
     when: << pipeline.parameters.run_shellcheck >>
