--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,7 @@ default:
   terraform_docker_version: &terraform_docker_version
     docker_version: 1.5.7-1
   validate_lint_sec_paths: &validate_lint_sec_paths
-      [
-    "."
-  ]
+    - "."
 
 parameters:
   run_setup:
@@ -46,7 +44,9 @@ workflows:
       - smartrent/terraform_format:
           name: Terraform Format
           <<: *terraform_docker_version
-          terraform_format_path: "."
+          matrix:
+            parameters:
+              format_path: *validate_lint_sec_paths
       - smartrent/terraform_validate:
           name: Terraform Validate 
           <<: *terraform_docker_version
