--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,10 @@ workflows:
       - smartrent/tflint:
           name: TFLint 
           <<: *terraform_docker_version
-          tflint_path: "."
+          tflint_path: "/"
+          tflint_path_part2: ""
+          tflint_tfvars_file: ""
+          tflint_force_pass: "false"
 
   wf-tfsec:
     when: << pipeline.parameters.run_terraform >>
