--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ workflows:
       - smartrent/tflint:
           name: TFLint 
           <<: *terraform_docker_version
-          tflint_path: "/"
+          tflint_path: *validate_lint_sec_paths
           tflint_force_pass: "false"
 
   wf-tfsec:
